--- a/Table.html
+++ b/Table.html
@@ -113,5 +113,47 @@
         </td>
       </tr>
     </table>
+    <table>
+      Information
+      </caption>
+      <tr>
+        <th>Name</th>
+        <td>Rishabh</td>
+      </tr>
+      <tr>
+        <th rowspan="4">Phone</th>
+        <td>7007425209</td>
+      </tr>
+      <tr>
+        <td>1223456789</td>
+      </tr>
+      <tr>
+        <td>
+          6381269881318
+        </td>
+      </tr>
+      <tr>
+        <td>
+          6913273813113
+        </td>
+      </tr>
+         <table border="1" cellpadding="10px" cellspacing="0">
+      <caption>
+        Information
+      </caption>
+      <tr>
+        <th rowspan="3">April</th>
+        <td>aguydgd</td>
+        <td>ddwdgd</td>
+      </tr>
+      <tr>
+        <td>ftfu</td>
+        <td>uftut</td>
+      </tr>
+      <tr>
+        <td>fegeg</td>
+        <td>dwuyd</td>
+      </tr>
+    </table>
   </body>
 </html>
